# cowservice

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml
charts/cowservice/: Chart.yaml  values.yaml
charts/cowservice/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
